# oop_pract_1

./: .pre-commit-config.yaml  README.md  oop_pract_1.code-workspace  pyproject.toml
examples/: Book.py  Rational.py  Rectangle.py  Rectangle_mod_1.py  Rectangle_mod_2.py  River.py
tasks/: fraction_part.py  iomixin.py  money.py  task_1.py  task_2.py
tasks/money_package/: __init__.py  money.py
tests/: test_fraction_part.py  test_money.py
