[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oop-pract-1"
version = "0.1.0"
description = "Первая лабораторная работа по ООП"
authors = [
    { name = "Timur"}
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "cfgv==3.4.0",
    "colorama==0.4.6",
    "distlib==0.4.0",
    "exceptiongroup==1.3.0",
    "filelock==3.19.1",
    "identify==2.6.14",
    "iniconfig==2.1.0",
    "nodeenv==1.9.1",
    "packaging==25.0",
    "platformdirs==4.4.0",
    "pluggy==1.6.0",
    "pre_commit==4.3.0",
    "Pygments==2.19.2",
    "PyYAML==6.0.2",
    "tomli==2.2.1",
    "typing_extensions==4.15.0",
    "virtualenv==20.34.0"
]


[project.optional-dependencies]
dev = [
    "flake8==7.3.0",
    "flake8-pyproject==1.2.3",
    "mccabe==0.7.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "pytest==8.4.2",
    "pytest-env==1.1.5",
    "uv==0.8.23",
    "-e git+https://github.com/mazy99/oop_pract_1.git@02fb61d2f2b59381a8de9ed053ef38b381f39e30#egg=oop_pract_1"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-ignore = ["E203", "W503"]
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests","tasks"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--rootdir=. --pyargs"
pythonpath = ["."]
